# up2date-win

./: .gitignore  .gitmodules  README.md  nuget.config  up2date.nuspec
.github/: CONTRIBUTING.md  README.txt
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: artifacts.yaml  build.yaml  ci.yaml  package.yaml  release.yaml  scorecards.yml  test.yaml
Up2dateService/: Bugs_and_issues.txt  Localization.md  README.txt  Up2dateService.sln  Up2dateService.sln.DotSettings
Up2dateService/Script/: CheckArchitecture.vbs  ImportCertificates.bat  ImportCertificates.vbs  KillConsole.vbs  RTSoft GmbH RITMS Code Signing.cer  RTSoft GmbH Root CA.cer  SOFTWARE DEVELOPMENT CENTRE RTSOFT OOO 33b508a477470f4bf7a557d6.cer  SOFTWARE DEVELOPMENT CENTRE RTSOFT OOO 6475a64cc2909438b757e014.cer  UpdateTrustedStore.vbs
Up2dateService/Setup/: Setup.vdproj
Up2dateService/Setup32/: Setup.vdproj
Up2dateService/Setup64/: Setup.vdproj
Up2dateService/SimpleClientApp/: App.config  LoggerStub.cs  Program.cs  SettingsManagerStub.cs  SetupManagerStub.cs  SimpleClientApp.csproj  packages.config
Up2dateService/Up2dateClient/: Client.cs  ClientResult.cs  DeploymentInfo.cs  (+6 more)
Up2dateService/wrapperdll/: CMakeLists.txt  CallbackDispatcher.cpp  CallbackDispatcher.hpp  build.bat  ddiclient.h  dllexport.h  wrapperdll.vcxproj  wrapperdll.vcxproj.filters
docs/: Gemfile  _config.yml
nuget.local/: rtsoft.ritms.up2date.net.1.0.0-alpha.nupkg  rtsoft.ritms.up2date.net.1.0.0.nupkg  rtsoft.ritms.up2date.net.2.0.0.nupkg
package/: CreateChocoPackage.ps1  up2date.nuspec
(+225 files in other folders)
